cros: Fix flaky crashes in TrayAccessibilityTest.ShowNotification

The ChromeVoxPanel is sometimes being opened twice, the second time
during test shutdown. This causes the ChromeVoxPanelWidgetObserver
to be deleted, so OnNativeWidgetDestroying for the second panel calls
into a deleted observer.

The root cause is a race between test shutdown and the component
extension loader. In particular, if the load completes after
NOTIFICATION_APP_TERMINATING then it sees that
AccessibilityManager::chromevox_panel_ is null and opens a second
ChromeVoxPanel. Nulling out chromevox_panel_ during shutdown was
added in http://crrev.com/c/838180 in late December to fix a shutdown
crash, so the test has probably been flaky since then.

Instead, explicitly avoid creating new ChromeVox panels during
shutdown, both due to screen unlock/shutdown and due to late loading
of the component extension.

Bug: 801700
Test: browser_tests --gtest_filter=*TrayAccessibilityTest.ShowNotication* --gtest_repeat=10 --gtest_shuffle
Change-Id: Ic313b440669a3097ad100e8f4b77404f01112fa0
Reviewed-on: https://chromium-review.googlesource.com/865615
Reviewed-by: David Tseng <dtseng@chromium.org>
Commit-Queue: James Cook <jamescook@chromium.org>
Cr-Commit-Position: refs/heads/master@{#529548}
Former-commit-id: 0c4f37ac0d5713ca046b7eedc99c68592137078f