chrome/browser/chromeos/system/tray_accessibility_browsertest.cc
@@ -968,9 +968,7 @@ IN_PROC_BROWSER_TEST_P(TrayAccessibilityTest, ShowMenuWithShowOnLoginScreen) {
   EXPECT_TRUE(CanCreateMenuItem());
 }
 
-// Flaky crashes on linux-chromeos-rel and linux-chromeos-dbg.
-// http://crbug.com/801700
-IN_PROC_BROWSER_TEST_P(TrayAccessibilityTest, DISABLED_ShowNotification) {
+IN_PROC_BROWSER_TEST_P(TrayAccessibilityTest, ShowNotification) {
   const base::string16 BRAILLE_CONNECTED =
       base::ASCIIToUTF16("Braille display connected.");
   const base::string16 CHROMEVOX_ENABLED =
